fix spacing issues with btns

--- a/styles.css
+++ b/styles.css
@@ -17,15 +17,16 @@ h1 {
   height: 183px;
 }
 
+
 .btn-group .btn {
-  margin-right: 7px;
+  margin-right: 1px;
   margin-bottom: 7px;
 }
 
 .col-md-4.odd {
 height:150px;
 width:150px;
-background-color: #3498db;
+background-color: #66cdf6;
 color: #fff;
 text-align: center;
 font-size: 102px;
@@ -34,7 +35,7 @@ font-size: 102px;
 .col-md-4.even {
 height:150px;
 width:150px;
-background-color:#2c3e50;
+background-color:#f8c3da;
 color: #fff;
 text-align: center;
 font-size: 102px;;
@@ -62,6 +63,7 @@ a.navbar-brand {
 #score-div {
   color:  #3498db;
   font-size: 35px;
+  padding-top: 0px;
 }
 
 #message {
@@ -70,4 +72,44 @@ a.navbar-brand {
 }
 .center-block {
   margin-top:10px;
+}
+.btn-info {
+  background-color: #66cdf6;
+  border: none;
+  background-image: none;
+}
+
+.btn-info:hover{
+  background-color: #89013d;
+  border: none;
+  background-image: none; 
+}
+ .btn-info:visited{
+  background-color: #89013d;
+  border: none;
+  background-image: none; 
+}
+.btn-success {
+  background-color: #9cd378;
+  border: none;
+  background-image: none;
+  width:110px;
+}
+
+.btn-success:hover {
+  background-color: #89013d;
+  border: none;
+  background-image: none;
+}
+
+.btn-danger {
+  background-color: #ce83b7;
+  border: none;
+  background-image: none;
+  width:110px;
+}
+.btn-danger:hover {
+  background-color: #89013d;
+  border: none;
+  background-image: none;
 }
